; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dummynet.c_dn_sched_modevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dummynet.c_dn_sched_modevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_alg = type { i32 }

@MOD_LOAD = common dso_local global i32 0, align 4
@MOD_UNLOAD = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dn_sched_modevent(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.dn_alg*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = bitcast i8* %9 to %struct.dn_alg*
  store %struct.dn_alg* %10, %struct.dn_alg** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @MOD_LOAD, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load %struct.dn_alg*, %struct.dn_alg** %8, align 8
  %16 = call i32 @load_dn_sched(%struct.dn_alg* %15)
  store i32 %16, i32* %4, align 4
  br label %26

17:                                               ; preds = %3
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @MOD_UNLOAD, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load %struct.dn_alg*, %struct.dn_alg** %8, align 8
  %23 = call i32 @unload_dn_sched(%struct.dn_alg* %22)
  store i32 %23, i32* %4, align 4
  br label %26

24:                                               ; preds = %17
  %25 = load i32, i32* @EINVAL, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %24, %21, %14
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @load_dn_sched(%struct.dn_alg*) #1

declare dso_local i32 @unload_dn_sched(%struct.dn_alg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
